<resources>
    <string name="app_name">EcoKids</string>
    <string name="register_text">Don\'t have an account? <font color="#FBBB00">Register now</font></string>
    <string name="terms_text">By signing up, you agree with our <font color="#FBBB00">Terms and Conditions</font></string>
    <string name="logo">Logo</string>
    <string name="learn_more">Learn something new concepts easily with interactive lessons</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password"><font color="#FBBB00">Forgot Password?</font></string>
    <string name="gmail">gmail</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="already_have_account">Already have an account? <font color="#FBBB00">Login now</font></string>
    <string name="ecochallenge">EcoChallenge</string>
    <string name="_1852">1852</string>
    <string name="_15">15</string>
    <string name="ic_diamond">ic_diamond</string>
    <string name="ic_heart">ic_heart</string>
    <string name="ic_koin">ic_koin</string>
    <string name="ic_xp">ic_xp</string>
    <string name="date_challenge_agustus">1 – 10 Agustus 2025</string>
    <string name="date_challenge_september">4 – 16 September 2025</string>
    <string name="poster_challenge">poster_challenge</string>
    <string name="ic_bottle">ic_bottle</string>
    <string name="ic_bekal">ic_bekal</string>
    <string name="bawa_botol_minum">Bawa botol minum</string>
    <string name="_0">0%</string>
    <string name="join_challenge">Join Challenge</string>
    <string name="zero_percent">0%</string>
    <string name="back">Kembali</string>
    <string name="bawa_bekal_makanan">Bawa bekal makanan</string>
    <string name="search">Mau belajar apa?</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="notif">Notifikasi</string>
    <string name="avatar">Avatar</string>
    <string name="materi">Materi Pelajaran</string>
    <string name="challenge">Challenge</string>
    <string name="agustus">Agustus Challenge Mengurangi Sampah Plastik</string>
    <string name="periodeAgustus">Periode : 1 - 10 Agustus 2025</string>
    <string name="detail">Detail</string>
    <string name="september">September Challenge Menanam Pohon</string>
    <string name="periodeSeptember">Periode : 4 - 16 September 2025</string>
    <string name="pengantar">Pengantar</string>
    <string name="grk">Gas Rumah Kaca</string>
    <string name="pi">Perubahan Iklim</string>
    <string name="et">Energi Terbarukan</string>
    <string name="ap">Adaptasi Perubahan</string>
    <string name="sampah">Sampah</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="simpan">Simpan</string>
    <string name="quiz">quiz</string>
    <string name="tv_itemmateri">Gas Rumah Kaca dan Dampaknya</string>
    <string name="tv_linkmateri">Detail Materi</string>
    <string name="addnewchallenge">Tambah EcoChallenge Baru</string>
    <string name="lanjutchallenge">Lanjutkan Challenge</string>
</resources>