<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@drawable/gradient_background"
tools:context=".MainActivity">

<ImageView
    android:id="@+id/logo"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="84dp"
    android:contentDescription="@string/logo"
    android:src="@drawable/logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/txtDesc"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="27dp"
    android:gravity="center"
    android:text="@string/learn_more"
    android:textAlignment="center"
    android:textColor="@android:color/white"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/logo"
    app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="54dp"
        android:autofillHints="Masukkan username anda"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDesc"
        app:layout_constraintWidth_percent="0.8" />

<EditText
    android:id="@+id/etPassword"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_marginTop="24dp"
    android:autofillHints="Masukkan password anda"
    android:background="@drawable/rounded_edittext"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:padding="15dp"
    android:textColorHint="@color/black"
    android:textColor="@color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/etUsername"
    app:layout_constraintWidth_percent="0.8" />

<Button
    android:id="@+id/btnLogin"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_marginTop="28dp"
    android:backgroundTint="@color/orange"
    android:text="@string/login"
    android:textColor="@android:color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/etPassword"
    app:layout_constraintWidth_percent="0.8" />

<TextView
    android:id="@+id/txtForgotPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="40dp"
    android:text="@string/forgot_password"
    android:textColor="#FBBB00"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

<TextView
    android:id="@+id/txtRegister"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="42dp"
    android:textColor="@android:color/white"
    android:textSize="14sp"
    android:text="@string/register_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txtForgotPassword" />


    <LinearLayout
        android:id="@+id/btnSocialLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtTerms"
        app:layout_constraintTop_toBottomOf="@id/txtRegister">

        <ImageView
            android:id="@+id/btnGmailLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gmail"
            android:padding="10dp"
            android:src="@drawable/gmail"/>

        <ImageView
            android:id="@+id/btnFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facebook"
            android:padding="10dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/btnTwitterLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/twitter"
            android:padding="10dp"
            android:src="@drawable/twitter"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/terms_text"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSocialLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
