<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_bg">

        <androidx.cardview.widget.CardView
            android:id="@+id/headerCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:background="@drawable/header">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:text="@string/ecochallenge"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivDiamond"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/ic_diamond"
                    android:src="@drawable/ic_diamond"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/_1852"
                    android:textColor="@color/yellow"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ivDiamond"
                    app:layout_constraintStart_toEndOf="@+id/ivDiamond"
                    app:layout_constraintTop_toTopOf="@+id/ivDiamond" />

                <ImageView
                    android:id="@+id/ivHeart"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/ic_heart"
                    android:src="@drawable/ic_heart"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLives"
                    app:layout_constraintEnd_toStartOf="@+id/tvLives"
                    app:layout_constraintTop_toTopOf="@+id/tvLives" />

                <TextView
                    android:id="@+id/tvLives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/_15"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPoints"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvPoints" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/challengeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/headerCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvChallengeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/september_challenge"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvChallengeDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/date_challenge"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvChallengeTitle" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvChallengeImage"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvChallengeDate">

                    <ImageView
                        android:id="@+id/ivChallengeImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster_challenge"
                        android:scaleType="centerCrop"
                        android:src="@drawable/poster_challenge" />
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/cvChallengeImage" />

                <Button
                    android:id="@+id/btnJoinChallenge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/join_challenge"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>